--- a/view/frontend/layout/catalog_product_view.xml
+++ b/view/frontend/layout/catalog_product_view.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0"?>
 <page layout="1column" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-    <body>
-        <container name="product.info.media">
-            <block class="Ax\Zoom\Block\AxProduct" />
-        </container>
-
-    </body>
+    <referenceContainer name="product.info.media">
+        <block class="Ax\Zoom\Block\AxProduct" />
+    </referenceContainer>
 </page>
